SF Primes/src/objects/Trigger_Toggle__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code_Reference__c</fullName>
        <description>The name of a class, method, or code block.</description>
        <inlineHelpText>The name of a class, method, or code block.</inlineHelpText>
        <label>Code Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this box is checked, the Trigger is turned on. When unchecked, the Trigger is turned off.</description>
        <inlineHelpText>When this box is checked, the Trigger is turned on. When unchecked, the Trigger is turned off.</inlineHelpText>
        <label>On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <label>RecordType Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <description>For reference only, this is the name of the sObject the Trigger is on.</description>
        <inlineHelpText>For reference only, this is the name of the sObject the Trigger is on.</inlineHelpText>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trigger Toggle</label>
</CustomObject>